--- a/style.css
+++ b/style.css
@@ -14,13 +14,12 @@
     background: rgb(225, 255, 143);
     height: 800px;   
     background-image: url(img/heder-star/Star2.svg), url(img/heder-star/Star3.svg), url(img/heder-star/starbig.svg), url(img/heder-star/Star5.svg), url(img/heder-star/Star4.svg);
-    background-position: 63px 94px, 156px 69px, calc(170% - -334px), 948px 538px, 1013px 568px;
+    background-position: calc(100% - 1312px) 88px, calc(100% - 1258px) 50px, calc(100% + 480px) -400px,  calc(100% - 346px) 540px, calc(100% - 436px) 495px;
+    overflow: hidden;
     background-repeat: no-repeat;
    
 }
 .header__container {
-    padding-left: 120px;
-    max-height: 358px;
     max-width: 768px;
     padding-top: 196px;
 
@@ -42,7 +41,7 @@
     padding-bottom: 48px;
     max-width: 720px;
 }
-.header__text_bold {
+.header__text-bold {
     font-weight: 600;
 }
 .header__button {
@@ -67,9 +66,10 @@
     box-sizing: border-box;
     border: 1px solid rgb(0, 0, 0);
 }
-
+.scrol {
+    background: rgb(188, 236, 48);
+}
 .scrollbar {
-    width: 3220px;
     height: 90px;
     display: flex;
     align-items: center;
@@ -89,17 +89,16 @@
     padding-left: 51px;
 }
 
-.games__container {
+.games-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     align-self: stretch;
     background: #202027;
     background-image: url("img/Star1.svg"), url("img/Star11.svg"), url("img/Star12.svg");
-    background-position: calc(100% + 91px) 24px, calc(100% + -1355px) 700px, calc(100% + -1322px) 754px;
+    background-position: calc(100% + 77px) 143px, calc(100% - 1380px) 770px, calc(100% - 1340px) 822px;
+    overflow: hidden;
     background-repeat: no-repeat;
-    padding-left: 119px;
-    padding-right: 120px;
 }
 
 .games {
@@ -108,7 +107,7 @@
     font-weight: 700;
     padding-top: 94px;
 }
-.games__text {
+.games-text {
     color: #FFF;
     font-family: Montserrat;
     font-size: 24px;
