--- a/style.css
+++ b/style.css
@@ -1,220 +1,271 @@
 * {
-    margin: 0px;
-    padding: 0px;
-  }
-  body {
-    font-family: "Montserrat", sans-serif;
-  }
-  .center {
-    padding-left: calc(50% - 720px);
-    padding-right: calc(50% - 720px); 
-  }
-  
-.header {
-    background: rgb(225, 255, 143);
-    height: 800px;   
-    background-image: url(img/heder-star/Star2.svg), url(img/heder-star/Star3.svg), url(img/heder-star/starbig.svg), url(img/heder-star/Star5.svg), url(img/heder-star/Star4.svg);
-    background-position: calc(100% - 1312px) 88px, calc(100% - 1258px) 50px, calc(100% + 480px) -400px,  calc(100% - 346px) 540px, calc(100% - 436px) 495px;
-    overflow: hidden;
-    background-repeat: no-repeat;
-   
+  margin: 0px;
+  padding: 0px;
 }
-.header__container {
-    max-width: 768px;
-    padding-top: 196px;
 
+body {
+  font-family: "Montserrat", sans-serif;
 }
+
+.center {
+  padding-left: calc(50% - 720px);
+  padding-right: calc(50% - 720px);
+}
+
+.header {
+  background: rgb(225, 255, 143);
+  height: 800px;
+  background-image: url(img/heder-star/Star2.svg), url(img/heder-star/Star3.svg), url(img/heder-star/starbig.svg), url(img/heder-star/Star5.svg), url(img/heder-star/Star4.svg);
+  background-position: calc(100% - 1312px) 88px, calc(100% - 1258px) 50px, calc(100% + 480px) -400px, calc(100% - 346px) 540px, calc(100% - 436px) 495px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+}
+
+.header__container {
+  max-width: 768px;
+  padding-top: 196px;
+}
+
 .header__heading {
-    color: rgb(32, 32, 39);
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 78px;
-    text-align: left;
+  color: rgb(32, 32, 39);
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 78px;
+  text-align: left;
 }
 
 .header__text {
-    color: #202027;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 32px;
-    padding-top: 24px;
-    padding-bottom: 48px;
-    max-width: 720px;
+  color: #202027;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  padding-top: 24px;
+  padding-bottom: 48px;
+  max-width: 720px;
 }
+
 .header__text-bold {
-    font-weight: 600;
+  font-weight: 600;
 }
+
 .header__button {
-    cursor: pointer;
-    box-sizing: border-box;
-    border: 1px solid rgb(32, 32, 39);
-    border-radius: 60px;
-    background: rgb(32, 32, 39);
-    color: rgb(255, 255, 255);
-    padding: 16px 28px;
-    width: 247px;
-    height: 66px;
-    font-size: 24px;
-    font-weight: 600;
-    display: inline-block;
-    text-decoration: none;
-    text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  border: 1px solid rgb(32, 32, 39);
+  border-radius: 60px;
+  background: rgb(32, 32, 39);
+  color: rgb(255, 255, 255);
+  padding: 16px 28px;
+  width: 247px;
+  height: 66px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 29px;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
 }
+
 .header__button:hover {
-    background: rgb(225, 255, 143);
-    color: rgb(0, 0, 0);  
-    box-sizing: border-box;
-    border: 1px solid rgb(0, 0, 0);
+  background: rgb(225, 255, 143);
+  color: rgb(0, 0, 0);
+  box-sizing: border-box;
+  border: 1px solid rgb(0, 0, 0);
 }
+
 .scrol {
-    background: rgb(188, 236, 48);
+  background: rgb(188, 236, 48);
+  padding: 27px 0px;
+  overflow: hidden;
+  display: flex;
 }
+
 .scrollbar {
-    height: 90px;
-    display: flex;
-    align-items: center;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(50px);
-    background: rgb(188, 236, 48);
-    flex-wrap: wrap;
-    overflow: hidden;
-    max-height: 87px;
+  display: flex;
+  align-items: center;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px);
+  gap: 51px;
+  flex-shrink: 0;
 }
+
 .scrollbar__text {
-    color: rgb(32, 32, 39);
-    font-size: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding-right: 51px;
-    padding-left: 51px;
+  color: rgb(32, 32, 39);
+  font-size: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+  white-space: nowrap;
+  text-transform: uppercase;
 }
 
 .games-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    align-self: stretch;
-    background: #202027;
-    background-image: url("img/Star1.svg"), url("img/Star11.svg"), url("img/Star12.svg");
-    background-position: calc(100% + 77px) 143px, calc(100% - 1380px) 770px, calc(100% - 1340px) 822px;
-    overflow: hidden;
-    background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: stretch;
+  background: #202027;
+  background-image: url("img/Star1.svg"), url("img/Star11.svg"), url("img/Star12.svg");
+  background-position: calc(100% + 77px) 143px, calc(100% - 1380px) 770px, calc(100% - 1340px) 822px;
+  overflow: hidden;
+  background-repeat: no-repeat;
 }
 
 .games {
-    color: #FFF;
-    font-size: 64px;
-    font-weight: 700;
-    padding-top: 94px;
+  color: #FFF;
+  font-size: 64px;
+  font-weight: 700;
+  padding-top: 94px;
 }
+
 .games-text {
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 32px; 
-    max-width: 788px;
-    padding-bottom: 72px;
-    padding-top: 24px;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  max-width: 788px;
+  padding-bottom: 72px;
+  padding-top: 24px;
 }
+
 .game-content {
-    margin: 32px;
-    margin-bottom: 36px;
+  margin: 32px;
+  margin-bottom: 36px;
 }
+
 .game-card__number {
-    color: rgb(32, 32, 39);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 110%;
-    text-align: left;  
-    display: inline-block;
+  color: rgb(32, 32, 39);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 110%;
+  text-align: left;
+  display: inline-block;
 }
+
 .game-card__text {
-    color: rgb(32, 32, 39);
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 39px;
-    text-align: left;
-    display: inline-block;
+  color: rgb(32, 32, 39);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 39px;
+  text-align: left;
+  display: inline-block;
 }
 
 .game-cards {
-    max-height: 1060px;
-    max-width: 1201px;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 32px;
-    align-items: start;
-    margin-bottom: 96px;
+  max-height: 1060px;
+  max-width: 1201px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 32px;
+  align-items: start;
+  margin-bottom: 96px;
 }
-
 
 .game-card {
-    display: flex;
-    flex-direction: column;
-    grid-column: span 4;
-    background-color: #FFFFFF ;
-    border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  grid-column: span 4;
+  background-color: #FFFFFF;
+  border-radius: 30px;
 }
+
 .game-card:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
+
 .game-card__image {
-    border-radius: 30px;
-    height: 314px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  border-radius: 30px;
+  height: 314px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .game-card--top {
-    margin-top: -40px;
+  margin-top: -40px;
 }
 
 .game-card__image_type_1 {
-    background: url(img/game_1.png);
-    background-position: center;
-    
+  background: url(img/game_1.png);
+  background-position: center;
 }
+
 .game-card__image_type_2 {
-    background: url(img/game_2.png);
-    background-position: center;
-
-}
-.game-card__image_type_3{
-    background: url(img/game_3.png);
-    background-position: center;
-
-}
-.game-card__image_type_4{
-    background: url(img/game_4.png);
-    background-position: center;
-
-}
-.game-card__image_type_5{
-    background: url(img/game_5.png);
-    background-position: center;
-
-}
-.game-card__image_type_6{
-    background: url(img/game_6.png);
-    background-position: center;
-
+  background: url(img/game_2.png);
+  background-position: center;
 }
 
+.game-card__image_type_3 {
+  background: url(img/game_3.png);
+  background-position: center;
+}
+
+.game-card__image_type_4 {
+  background: url(img/game_4.png);
+  background-position: center;
+}
+
+.game-card__image_type_5 {
+  background: url(img/game_5.png);
+  background-position: center;
+}
+
+.game-card__image_type_6 {
+  background: url(img/game_6.png);
+  background-position: center;
+}
 
 .footer {
-color: rgb(0, 0, 0);
-font-family: inherit;
-font-size: 24px;
-font-weight: 600;
-line-height: 29px;
-text-align: center;
-background: rgb(189, 237, 53);
-height: 150px;
-display: flex;
-align-items: center;
-justify-content: center;
+  color: rgb(0, 0, 0);
+  font-family: inherit;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 29px;
+  text-align: center;
+  background: rgb(189, 237, 53);
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+@media (max-width: 767px) {
+  .center {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .header {
+    height: 700px;
+  }
+  .header__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .header__heading {
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: 0px;
+    text-align: center;
+  }
+  .header__text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 100%;
+    padding-top: 24px;
+    padding-bottom: 36px;
+    text-align: center;
+  }
+  .header__button {
+    font-size: 16px;
+    line-height: 20px;
+    width: 285px;
+    height: 55px;
+  }
+  .games-container {
+    display: none;
+  }
+}/*# sourceMappingURL=style.css.map */
