--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 .center {
-  padding-left: calc(50% - 720px);
-  padding-right: calc(50% - 720px);
+  padding-left: calc(50% - 600px);
+  padding-right: calc(50% - 600px);
 }
 
 .header {
@@ -154,8 +154,6 @@ body {
 }
 
 .game-cards {
-  max-height: 1060px;
-  max-width: 1201px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -189,33 +187,27 @@ body {
 }
 
 .game-card__image_type_1 {
-  background: url(img/game_1.png);
-  background-position: center;
+  background-image: url(img/game_1.png);
 }
 
 .game-card__image_type_2 {
-  background: url(img/game_2.png);
-  background-position: center;
+  background-image: url(img/game_2.png);
 }
 
 .game-card__image_type_3 {
-  background: url(img/game_3.png);
-  background-position: center;
+  background-image: url(img/game_3.png);
 }
 
 .game-card__image_type_4 {
-  background: url(img/game_4.png);
-  background-position: center;
+  background-image: url(img/game_4.png);
 }
 
 .game-card__image_type_5 {
-  background: url(img/game_5.png);
-  background-position: center;
+  background-image: url(img/game_5.png);
 }
 
 .game-card__image_type_6 {
-  background: url(img/game_6.png);
-  background-position: center;
+  background-image: url(img/game_6.png);
 }
 
 .footer {
@@ -267,5 +259,8 @@ body {
   }
   .games-container {
     display: none;
+  }
+  .footer {
+    font-size: 16px;
   }
 }/*# sourceMappingURL=style.css.map */
