--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,9 @@
   body {
     font-family: "Montserrat", sans-serif;
   }
+  a {
+    text-decoration: none;
+  }
   .center {
     padding-left: calc(50% - 600px);
     padding-right: calc(50% - 600px); 
@@ -121,6 +124,8 @@
     padding-top: 24px;
 }
 .game-content {
+    display: flex;
+    flex-direction: column;
     margin: 32px;
     margin-bottom: 36px;
 }
@@ -149,7 +154,6 @@
     align-items: start;
     margin-bottom: 96px;
 }
-
 
 .game-card {
     display: flex;
@@ -195,22 +199,121 @@
 }
 .game-card__image_type_6{
     background-image: url(img/game_6.png);
-    
 }
 
+// МИНИ-ИГРЫ
+.minigames {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 32px;
+    background:
+        url("img/Star 7.svg") calc(100% - 124px) 93px no-repeat, 
+        url("img/Star 6.svg") calc(100% - 45px) 126px no-repeat,
+        url("img/Star 10.svg") calc(100% - 150px) 3414px no-repeat,
+        url("img/Star 8.svg") calc(100% - 52px) 3366px no-repeat,
+        #202027;
+    padding-bottom: 144px;
+}
+.minigames__title {
+    color: #FFF;
+    font-size: 64px;
+    font-weight: 700;
+    padding-top: 46px;
+    padding-bottom: 72px;
+
+}
+.minigame-block {
+    display: flex;
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+.reversed {
+    flex-direction: row-reverse;
+}
+.left-side {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+    padding: 48px;
+}
+.minigame-name {
+    color: rgba(32, 32, 39, 1);
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 100%;
+    text-align: left;
+}
+.minigame-text {
+    color: rgba(32, 32, 39, 1);
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: left; 
+    padding-top: 24px;
+    padding-bottom: 36px; 
+    
+    
+}
+.minigame-button {
+    cursor: pointer;
+    box-sizing: border-box;
+    border: 1px solid rgb(32, 32, 39);
+    border-radius: 60px;
+    background: rgb(32, 32, 39);
+    color: rgb(255, 255, 255);
+    padding: 16px 28px;
+    width: 247px;
+    height: 66px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 29px;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+}  
+.minigame__button:hover {
+    background: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);  
+    box-sizing: border-box;
+    border: 1px solid rgba(0, 0, 0, 1);
+    border-radius: 60px;
+}
+.right-side {
+    flex-shrink: 0;
+    position: relative;
+    overflow: hidden;
+    width: 600px;
+    min-height: 500px;
+}
+.right-minig1 {
+    background-image: url(img/minig1.png);
+}
+
+.right-minig2 {
+    background-image: url(img/minig2.png);
+}
+
+.right-minig3 {
+    background-image: url(img/minig3.png);
+}
 
 .footer {
 color: rgb(0, 0, 0);
-font-family: inherit;
 font-size: 24px;
 font-weight: 600;
 line-height: 29px;
 text-align: center;
 background: rgb(189, 237, 53);
-height: 150px;
 display: flex;
 align-items: center;
 justify-content: center;
+padding-top: 61px;
+padding-bottom: 60px;
 }
 
 @import "mobile";
