--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0px;
   padding: 0px;
@@ -216,6 +217,7 @@ a {
   background-image: url(img/game_6.png);
 }
 
+/* МИНИ-ИГРЫ*/
 .minigames {
   display: flex;
   flex-direction: column;
@@ -258,6 +260,7 @@ a {
   color: rgb(32, 32, 39);
   font-size: 48px;
   font-weight: 700;
+  /* line-height: 100%;*/
   text-align: left;
 }
 
